--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <p> <a href="https://avoyjana.github.io/bengaliiterature/">বাংলা সাহিত্য</a></p>
               </div>
               <div class="section" id="literature">
-                <h2>PHYSICS E-BOOK</h2>
+                <summary></summary><h2>PHYSICS E-BOOK</h2></summary>
                 <ul>
                 <p> Classical Mechanics <p>
                 <li> <a href="https://drive.google.com/file/d/1Ae8ElDl397yU7MOc5eF35kfZOQliYCK6/view?usp=sharing">Goldstien</a></li>
