--- a/index.html
+++ b/index.html
@@ -325,22 +325,23 @@
                 <p> <a href="https://avoyjana.github.io/bengaliiterature/">বাংলা সাহিত্য</a></p>
               </div>
               <div class="section" id="literature">
-                <summary></summary><h2>PHYSICS E-BOOK</h2></summary>
-                <ul>
-                <p> Classical Mechanics <p>
-                <li> <a href="https://drive.google.com/file/d/1Ae8ElDl397yU7MOc5eF35kfZOQliYCK6/view?usp=sharing">Goldstien</a></li>
-                <li> <a href="https://drive.google.com/file/d/1TPXqlT8tmj8zoIFg7fJX79cTJj6RDrbH/view?usp=sharing">JC Upadhyaya</a></li>
-                <li> <a href="https://drive.google.com/file/d/1TPXqlT8tmj8zoIFg7fJX79cTJj6RDrbH/view?usp=sharing">Rana & Joag</a></li>
-                <li> <a href="https://drive.google.com/file/d/1cdoW1SqGS9npZT1w7kmIgjuGjzI7yuR9/view?usp=sharing">YK Lim</a></li>
-                <p> Quantum Field Theory <p>
-                <li> <a href="https://drive.google.com/file/d/1Ooc10t3nxPDTErQ1-N2KrNZifTk_GQDd/view?usp=sharing">Peskin & Schroeder</a></li>
-                <li> <a href="https://drive.google.com/file/d/1GR5NGCd9ac0wPtLsZcLOkmEhK-1QpC2k/view?usp=sharing">Mark Srednicki</a></li>
-                <p> High Class Mathematics</p>
-                <li> <a href="https://drive.google.com/file/d/1KMPdRdDJD2NTfUx-Z0UcDTMzwHZybyYS/view?usp=sharing">Table of Integrals, Series and Products by Gradshteyn & Ryzhik</a></li>
-                <li> <a href="https://drive.google.com/file/d/1fIUiEUG9W1wWcRsO-8SC7VGx0YUrtr4K/view?usp=sharing">A treatise on the Theory of Bessel Function by G.N. Watson</a></li>
-                <li> <a href="https://drive.google.com/file/d/1WML0KV4okLOZ7Kl40qq2VSFqaOpDOA6s/view?usp=sharing">Green's function with application by Dean G. Duffy</a></li>
-                
-                </ul>
+                    <details>
+                        <summary><h2>PHYSICS E-BOOK</h2></summary>
+                        <ul>
+                            <p>Classical Mechanics</p>
+                            <li><a href="https://drive.google.com/file/d/1Ae8ElDl397yU7MOc5eF35kfZOQliYCK6/view?usp=sharing">Goldstien</a></li>
+                            <li><a href="https://drive.google.com/file/d/1TPXqlT8tmj8zoIFg7fJX79cTJj6RDrbH/view?usp=sharing">JC Upadhyaya</a></li>
+                            <li><a href="https://drive.google.com/file/d/1TPXqlT8tmj8zoIFg7fJX79cTJj6RDrbH/view?usp=sharing">Rana & Joag</a></li>
+                            <li><a href="https://drive.google.com/file/d/1cdoW1SqGS9npZT1w7kmIgjuGjzI7yuR9/view?usp=sharing">YK Lim</a></li>
+                            <p>Quantum Field Theory</p>
+                            <li><a href="https://drive.google.com/file/d/1Ooc10t3nxPDTErQ1-N2KrNZifTk_GQDd/view?usp=sharing">Peskin & Schroeder</a></li>
+                            <li><a href="https://drive.google.com/file/d/1GR5NGCd9ac0wPtLsZcLOkmEhK-1QpC2k/view?usp=sharing">Mark Srednicki</a></li>
+                            <p>High Class Mathematics</p>
+                            <li><a href="https://drive.google.com/file/d/1KMPdRdDJD2NTfUx-Z0UcDTMzwHZybyYS/view?usp=sharing">Table of Integrals, Series and Products by Gradshteyn & Ryzhik</a></li>
+                            <li><a href="https://drive.google.com/file/d/1fIUiEUG9W1wWcRsO-8SC7VGx0YUrtr4K/view?usp=sharing">A treatise on the Theory of Bessel Function by G.N. Watson</a></li>
+                            <li><a href="https://drive.google.com/file/d/1WML0KV4okLOZ7Kl40qq2VSFqaOpDOA6s/view?usp=sharing">Green's function with application by Dean G. Duffy</a></li>
+                        </ul>
+                    </details>
               </div>
               <div class="section" id="contact">
                 <h2>Contact</h2>
