--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                 <h4>PYTHON</h4>
             </div>
             <div class="section" id="teaching">
-                  <h2>Teaching Myself</h2>
-                  <p>I'm trying to making subjects notes in more intuitive way, rather than a represntative way.</p>
+                  <h2>MY NOTES</h2>
+                  <p>I'm trying to making subject's notes in more intuitive way, rather than a represntative way.</p>
                   <!-- Inserted Code Starts -->
                   <div id="contentContainer">
                     <h2 id="nmTitle">1. Newtonian Mechanics (NM)</h2>
@@ -268,7 +268,7 @@
                     <h2 id="cmTitle">2. Classical Mechanics (CM) :</h2>
                     <div id="cmContainer">
                       <ul id="cmList">
-                        <li><a href="#" onclick="loadPDF('your-file-id-4')">2.1 Generalised co-ordinate and, constraints</a></li>
+                        <li><a href="#" onclick="loadPDF('196CLxmEKyPiguDxL-qI7Qub1XQew3_VY')">2.1 Generalised co-ordinate and, constraints</a></li>
                         <li><a href="#" onclick="loadPDF('your-file-id-5')">2.2 Lagrangian Mechanics</a></li>
                         <li><a href="#" onclick="loadPDF('your-file-id-6')">2.3 Lagrangian of Rigid body</a></li>
                         <li><a href="#" onclick="loadPDF('your-file-id-7')">2.4 Action problems</a></li>
@@ -320,11 +320,6 @@
                   <!-- Inserted Code Ends -->
               </div>
               <div class="section" id="literature">
-                <h2>Study of Literature</h2>
-                <p> <a href="https://avoyjana.github.io/bengaliiterature/">English Literature</a></p>
-                <p> <a href="https://avoyjana.github.io/bengaliiterature/">বাংলা সাহিত্য</a></p>
-              </div>
-              <div class="section" id="literature">
                     <details>
                         <summary><h2>PHYSICS E-BOOK</h2></summary>
                         <ul>
@@ -340,6 +335,8 @@
                             <li><a href="https://drive.google.com/file/d/1KMPdRdDJD2NTfUx-Z0UcDTMzwHZybyYS/view?usp=sharing">Table of Integrals, Series and Products by Gradshteyn & Ryzhik</a></li>
                             <li><a href="https://drive.google.com/file/d/1fIUiEUG9W1wWcRsO-8SC7VGx0YUrtr4K/view?usp=sharing">A treatise on the Theory of Bessel Function by G.N. Watson</a></li>
                             <li><a href="https://drive.google.com/file/d/1WML0KV4okLOZ7Kl40qq2VSFqaOpDOA6s/view?usp=sharing">Green's function with application by Dean G. Duffy</a></li>
+                            <p>Statistics and Probability</p>
+                            <li><a href="https://drive.google.com/file/d/1KMPdRdDJD2NTfUx-Z0UcDTMzwHZybyYS/view?usp=sharing">Table of Integrals, Series and Products by Gradshteyn & Ryzhik</a></li>
                         </ul>
                     </details>
               </div>
