--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <h2 id="nmTitle">1. Newtonian Mechanics (NM)</h2>
                     <div id="nmContainer">
                       <ul id="nmList">
-                        <li><a href="#" onclick="loadPDF('1WZIU8OG5sE-ek99AgLqNvYR7wQBLcsIL')">1.1 Newton's law</a></li>
+                        <li><a href="#" onclick="loadPDF('')">1.1 Newton's law</a></li>
                         <li><a href="#" onclick="loadPDF('your-file-id-2')">1.2 Kinematics</a></li>
                         <li><a href="#" onclick="loadPDF('your-file-id-3')">1.3 Example Topic</a></li>
                         <!-- Add more PDF links as needed -->
@@ -268,13 +268,13 @@
                     <h2 id="cmTitle">2. Classical Mechanics (CM) :</h2>
                     <div id="cmContainer">
                       <ul id="cmList">
-                        <li><a href="#" onclick="loadPDF('196CLxmEKyPiguDxL-qI7Qub1XQew3_VY')">2.1 Generalised co-ordinate and, constraints</a></li>
-                        <li><a href="#" onclick="loadPDF('your-file-id-5')">2.2 Lagrangian Mechanics</a></li>
-                        <li><a href="#" onclick="loadPDF('your-file-id-6')">2.3 Lagrangian of Rigid body</a></li>
-                        <li><a href="#" onclick="loadPDF('your-file-id-7')">2.4 Action problems</a></li>
-                        <li><a href="#" onclick="loadPDF('your-file-id-8')">2.5 Lagrange undetermined multiplier</a></li>
-                        <li><a href="#" onclick="loadPDF('your-file-id-9')">2.6 Hamiltonian Mechanics</a></li>
-                        <li><a href="#" onclick="loadPDF('your-file-id-10')">2.7 Poisson bracket</a></li>
+                        <li><a href="#" onclick="loadPDF('196CLxmEKyPiguDxL-qI7Qub1XQew3_VY')"> 🔵 Generalised co-ordinate and, constraints</a></li>
+                        <li><a href="#" onclick="loadPDF('19KLIly_86iOnrCUq5BVY-PwIF2uHdCTb')"> 🔵 Lagrangian Mechanics</a></li>
+                        <li><a href="#" onclick="loadPDF('19Pn9Cm23a2y5UrsyPh0MAIz4VjaL5tp8')"> 🔵  Lagrangian of Rigid body</a></li>
+                        <li><a href="#" onclick="loadPDF('19SRgSVilsxpQ0vhiZVjtmZUNQ0g4CZT2')"> 🔵  Action problems</a></li>
+                        <li><a href="#" onclick="loadPDF('')"> 🔵  Lagrange undetermined multiplier</a></li>
+                        <li><a href="#" onclick="loadPDF('19ZUWpyFPx3a-7ypO_MFWQdYUAuo_BpVW')"> 🔵  Hamiltonian Mechanics</a></li>
+                        <li><a href="#" onclick="loadPDF('19dVUmOAbbvIEklgVKV7Kk-uC8RxR2cKm')"> 🔵  Poisson bracket</a></li>
                         <!-- Add more PDF links as needed -->
                       </ul>
                     </div>
