--- a/index.html
+++ b/index.html
@@ -324,10 +324,10 @@
                         <summary><h2>PHYSICS E-BOOK</h2></summary>
                         <ul>
                             <p>Classical Mechanics</p>
-                            <li><a href="https://drive.google.com/file/d/1Ae8ElDl397yU7MOc5eF35kfZOQliYCK6/view?usp=sharing">Goldstien</a></li>
-                            <li><a href="https://drive.google.com/file/d/1TPXqlT8tmj8zoIFg7fJX79cTJj6RDrbH/view?usp=sharing">JC Upadhyaya</a></li>
-                            <li><a href="https://drive.google.com/file/d/1TPXqlT8tmj8zoIFg7fJX79cTJj6RDrbH/view?usp=sharing">Rana & Joag</a></li>
-                            <li><a href="https://drive.google.com/file/d/1cdoW1SqGS9npZT1w7kmIgjuGjzI7yuR9/view?usp=sharing">YK Lim</a></li>
+                            <li><a href="https://drive.google.com/file/d/1-MsFRwbS7sWu_IhQ2BGI0FfdkX7cJgSE/view?usp=drivesdk">Goldstien</a></li>
+                            <li><a href="https://drive.google.com/file/d/1-QriB_QcdGFzzTm2gdTxIZ4J8MvSk6a9/view?usp=drivesdk">JC Upadhyaya</a></li>
+                            <li><a href="https://drive.google.com/file/d/1-Sy3wWvP_fw9MXzFCohzOYet-frVLc_-/view?usp=drivesdk">Rana & Joag</a></li>
+                            <li><a href="https://drive.google.com/file/d/1-cy42kVwL0ydUZ8wz-n59Sl6r-xfIi6a/view?usp=drivesdk">YK Lim</a></li>
                             <p>Quantum Field Theory</p>
                             <li><a href="https://drive.google.com/file/d/1Ooc10t3nxPDTErQ1-N2KrNZifTk_GQDd/view?usp=sharing">Peskin & Schroeder</a></li>
                             <li><a href="https://drive.google.com/file/d/1GR5NGCd9ac0wPtLsZcLOkmEhK-1QpC2k/view?usp=sharing">Mark Srednicki</a></li>
