--- a/index.html
+++ b/index.html
@@ -330,14 +330,14 @@
                             <li><a href="https://drive.google.com/file/d/1-Sy3wWvP_fw9MXzFCohzOYet-frVLc_-/view?usp=drivesdk">Rana & Joag</a></li>
                             <li><a href="https://drive.google.com/file/d/1-cy42kVwL0ydUZ8wz-n59Sl6r-xfIi6a/view?usp=drivesdk">YK Lim</a></li>
                             <p>Quantum Field Theory</p>
-                            <li><a href="https://drive.google.com/file/d/1Ooc10t3nxPDTErQ1-N2KrNZifTk_GQDd/view?usp=sharing">Peskin & Schroeder</a></li>
-                            <li><a href="https://drive.google.com/file/d/1GR5NGCd9ac0wPtLsZcLOkmEhK-1QpC2k/view?usp=sharing">Mark Srednicki</a></li>
+                            <li><a href="https://drive.google.com/file/d/10-LpjBAb4mjYQAwkA0xEZxvxXvkCBKvz/view?usp=drivesdk">Peskin & Schroeder</a></li>
+                            <li><a href="https://drive.google.com/file/d/1020ENknbNxY7yCb9SAtkS5b8ZlR0U8tW/view?usp=drivesdk">Mark Srednicki</a></li>
                             <p>High Class Mathematics</p>
                             <li><a href="https://drive.google.com/file/d/1KMPdRdDJD2NTfUx-Z0UcDTMzwHZybyYS/view?usp=sharing">Table of Integrals, Series and Products by Gradshteyn & Ryzhik</a></li>
                             <li><a href="https://drive.google.com/file/d/1fIUiEUG9W1wWcRsO-8SC7VGx0YUrtr4K/view?usp=sharing">A treatise on the Theory of Bessel Function by G.N. Watson</a></li>
                             <li><a href="https://drive.google.com/file/d/1WML0KV4okLOZ7Kl40qq2VSFqaOpDOA6s/view?usp=sharing">Green's function with application by Dean G. Duffy</a></li>
                             <p>Statistics and Probability</p>
-                            <li><a href="https://drive.google.com/file/d/1KMPdRdDJD2NTfUx-Z0UcDTMzwHZybyYS/view?usp=sharing">Table of Integrals, Series and Products by Gradshteyn & Ryzhik</a></li>
+                            <li><a href="https://drive.google.com/file/d/10PZU9DXw_UUeSdeCqEOWdbYv1LNkroPQ/view?usp=drivesdk"> Statistical Inference by Casella & Berger</a></li>
                         </ul>
                     </details>
               </div>
