--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               <div class="section" id="literature">
                     <details>
                         <summary><h2>PHYSICS E-BOOK</h2></summary>
-                        <summary><h2>These are collapsible content, click ▶️.</h2></summary>
+                        <h2>These are collapsible content, click ▶️.</h2>
                         <ul>
                             <p>Classical Mechanics</p>
                             <li><a href="https://drive.google.com/file/d/1-MsFRwbS7sWu_IhQ2BGI0FfdkX7cJgSE/view?usp=drivesdk">Goldstien</a></li>
