--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                       </ul>
                     </div>
                 
-                    <h2 id="cmTitle">2. Classical Mechanics (CM) :</h2>
+                    <h2 id="cmTitle">2. Classical Mechanics (CM) </h2>
                     <div id="cmContainer">
                       <ul id="cmList">
                         <li><a href="#" onclick="loadPDF('196CLxmEKyPiguDxL-qI7Qub1XQew3_VY')"> 🔵 Generalised co-ordinate and, constraints</a></li>
@@ -321,8 +321,10 @@
               </div>
               <div class="section" id="literature">
                     <details>
-                        <summary><h2>PHYSICS E-BOOK</h2></summary>
-                        <h2>These are collapsible content, click ▶️.</h2>
+                        <summary>
+                           <h2>PHYSICS E-BOOK<br>
+                               These are collapsible content, click ▶️.</h2>
+                        </summary>
                         <ul>
                             <p>Classical Mechanics</p>
                             <li><a href="https://drive.google.com/file/d/1-MsFRwbS7sWu_IhQ2BGI0FfdkX7cJgSE/view?usp=drivesdk">Goldstien</a></li>
