--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <details>
                         <summary>
                            <h2>PHYSICS E-BOOK<br>
-                               These are collapsible content, click ▶️.</h2>
+                               These are collapsible content, click here.</h2>
                         </summary>
                         <ul>
                             <p>Classical Mechanics</p>
