--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               <div class="profile">
                 <img src="image.jpeg" alt="photo">
                 <h1>Mr. AVOY JANA</h1>
-                <p>BSc(VU), Msc(IITD)</p>
+                <p>BSc(Vidyasagar University), Msc(IIT Delhi)</p>
               </div>
           
               <div class="section" id="introduction">
