--- a/index.html
+++ b/index.html
@@ -248,6 +248,9 @@
                     <li><a href="https://avoyjana.github.io/nettest2.github.io/">Mock Test 2</a></li>
                 </ul>
                 <h4>PYTHON</h4>
+                    <div class="iframe-container">
+                       <iframe src="cubicspline.html"></iframe>
+                    </div>
             </div>
             <div class="section" id="teaching">
                   <h2>MY NOTES</h2>
