--- a/index.html
+++ b/index.html
@@ -248,9 +248,10 @@
                     <li><a href="https://avoyjana.github.io/nettest2.github.io/">Mock Test 2</a></li>
                 </ul>
                 <h4>PYTHON</h4>
-                    <div class="iframe-container">
-                       <iframe src="cubicspline.html"></iframe>
-                    </div>
+                    <details>
+                         <summary>Load Page 1</summary>
+                             <iframe class="iframe-container" src="cubicspline.html"></iframe>
+                   </details>
             </div>
             <div class="section" id="teaching">
                   <h2>MY NOTES</h2>
