--- a/cubicspline.html
+++ b/cubicspline.html
@@ -6,7 +6,30 @@
     <title>Cubic Spline Interpolation</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/numeric/1.2.6/numeric.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        #plot {
+            width: 80%;
+            height: 600px;
+            margin: auto;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+        }
+        label, input {
+            display: block;
+            margin: 10px 0;
+        }
+        #info {
+            margin: 20px 0;
+        }
+    </style>
 </head>
+
 <body>
     <h1>Cubic Spline Interpolation</h1>
 
