--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 </ul>
                 <h4>PYTHON</h4>
                     <details>
-                         <summary>Load Page 1</summary>
+                         <summary>Cubic Spline Interpolation</summary>
                              <iframe class="iframe-container" src="cubicspline.html"></iframe>
                    </details>
             </div>
