--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
             /* Style for the iframe container */
             .iframe-container {
-                width: 100%; /* Full width of the parent */
+                width: 100vw; /* Full viewport width */
                 height: 2000px; /* Adjust height as needed */
                 border: none; /* No border */
                 display: none; /* Hidden by default */
