--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
             /* Style for the iframe container */
             .iframe-container {
-                width: 100vw; /* Full viewport width */
-                height: 2000px; /* Adjust height as needed */
+                width: 100%; /* Full viewport width */
+                height: 1700px; /* Adjust height as needed */
                 border: none; /* No border */
                 display: none; /* Hidden by default */
             }
