--- a/cubicspline.html
+++ b/cubicspline.html
@@ -12,12 +12,12 @@
             margin: 20px;
         }
         #plot {
-            width: 100vw; /* Full viewport width */
+            width: 100%; 
             height: 600px;
             margin: auto;
         }
         .container {
-            width: 100vw; /* Full viewport width */
+            width: 100%;
             margin: auto;
         }
         label, input {
