--- a/index.html
+++ b/index.html
@@ -123,20 +123,23 @@
               color: #333333; /* Text color */
           }
 
-            /* Style for the iframe container */
-            .iframe-container {
-                width: 100%; /* Full viewport width */
-                height: 1700px; /* Adjust height as needed */
-                border: none; /* No border */
-                display: none; /* Hidden by default */
-            }
-            details[open] .iframe-container {
-                display: block; /* Show iframe when details are open */
-            }
-            summary {
-                cursor: pointer;
-                font-weight: bold;
-            }
+          /* Style for the iframe container */
+        .iframe-container {
+            width: 100%; /* Full width of the parent container */
+            height: 100vh; /* Full viewport height, adjust as needed */
+            border: none; /* No border */
+            display: none; /* Hidden by default */
+            box-sizing: border-box; /* Include padding and border in width/height calculations */
+            overflow: auto; /* Handle overflow */
+        }
+        details[open] .iframe-container {
+            display: block; /* Show iframe when details are open */
+        }
+        summary {
+            cursor: pointer;
+            font-weight: bold;
+        }
+
   
   </style>
 </head>
