--- a/index.html
+++ b/index.html
@@ -250,10 +250,7 @@
                     <li><a href="https://avoyjana.github.io/nettest2.github.io/">Mock Test 2</a></li>
                 </ul>
                 <h4>PYTHON</h4>
-                    <details>
-                         <summary>Cubic Spline Interpolation</summary>
-                             <iframe class="iframe-container" src="cubicspline.html"></iframe>
-                   </details>
+                    <a href="cubicspline.html" target="_blank" class="open-link">Open Full Page in New Tab</a>
             </div>
             <div class="section" id="teaching">
                   <h2>MY NOTES</h2>
