--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
                     <li><a href="https://avoyjana.github.io/nettest2.github.io/">Mock Test 2</a></li>
                 </ul>
                 <h4>PYTHON</h4>
-                    <a href="cubicspline.html" target="_blank" class="open-link">Open Full Page in New Tab</a>
+                <ul>
+                <li><a href="cubicspline.html" target="_blank" class="open-link">Cubic Spline Interpolation</a></li>
+                </ul>
             </div>
             <div class="section" id="teaching">
                   <h2>MY NOTES</h2>
