--- a/index.html
+++ b/index.html
@@ -242,16 +242,16 @@
                 <h2>Coding Skill</h2>
                 <h3>HTML+CSS</h3>
                 <ul>
-                <li><a href="https://avoyjana.github.io/academicprofile/">This Web page</a></li>
-                <li><a href="https://avoyjana.github.io/YourArijit.github.io/">Enjoy Arijit Singh's world</a></li>
-                <li><a href="https://avoyjana.github.io/randomrabi.github.io/">Randomly pick Rabindra Sangeet</a></li>
+                <li><a href="https://https://avoyjana.github.io/Academic-Profile/"> 🔵 This Web page</a></li>
+                <li><a href="https://avoyjana.github.io/YourArijit.github.io/"> 🔵 Enjoy Arijit Singh's world</a></li>
+                <li><a href="https://avoyjana.github.io/randomrabi.github.io/"> 🔵 Randomly pick Rabindra Sangeet</a></li>
                 <li>CSIR NET Mock Tests : Physical Science</li>
-                    <li><a href="https://avoyjana.github.io/nettest1.github.io/">Mock Test 1</a></li>
-                    <li><a href="https://avoyjana.github.io/nettest2.github.io/">Mock Test 2</a></li>
+                    <li><a href="https://avoyjana.github.io/nettest1.github.io/"> 🔵 Mock Test 1</a></li>
+                    <li><a href="https://avoyjana.github.io/nettest2.github.io/"> 🔵 Mock Test 2</a></li>
                 </ul>
                 <h4>PYTHON</h4>
                 <ul>
-                <li><a href="cubicspline.html" target="_blank" class="open-link">Cubic Spline Interpolation</a></li>
+                <li><a href="cubicspline.html" target="_blank" class="open-link"> 🔵 Cubic Spline Interpolation</a></li>
                 </ul>
             </div>
             <div class="section" id="teaching">
@@ -262,10 +262,8 @@
                     <h2 id="nmTitle">1. Newtonian Mechanics (NM)</h2>
                     <div id="nmContainer">
                       <ul id="nmList">
-                        <li><a href="#" onclick="loadPDF('')">1.1 Newton's law</a></li>
-                        <li><a href="#" onclick="loadPDF('your-file-id-2')">1.2 Kinematics</a></li>
-                        <li><a href="#" onclick="loadPDF('your-file-id-3')">1.3 Example Topic</a></li>
-                        <!-- Add more PDF links as needed -->
+                        <li><a href="#" onclick="loadPDF('')"> 🔵 Newton's law</a></li>
+                        <li><a href="#" onclick="loadPDF('your-file-id-2')"> 🔵 Kinematics</a></li>
                       </ul>
                     </div>
                 
