--- a/index.html
+++ b/index.html
@@ -245,9 +245,8 @@
                 <li><a href="https://https://avoyjana.github.io/Academic-Profile/"> 🔵 This Web page</a></li>
                 <li><a href="https://avoyjana.github.io/YourArijit.github.io/"> 🔵 Enjoy Arijit Singh's world</a></li>
                 <li><a href="https://avoyjana.github.io/randomrabi.github.io/"> 🔵 Randomly pick Rabindra Sangeet</a></li>
-                <li>CSIR NET Mock Tests : Physical Science</li>
-                    <li><a href="https://avoyjana.github.io/nettest1.github.io/"> 🔵 Mock Test 1</a></li>
-                    <li><a href="https://avoyjana.github.io/nettest2.github.io/"> 🔵 Mock Test 2</a></li>
+                <li><a href="https://avoyjana.github.io/nettest1.github.io/"> 🔵 CSIR NET Mock Test 1 : Physical Science</a></li>
+                <li><a href="https://avoyjana.github.io/nettest2.github.io/"> 🔵 CSIR NET Mock Test 2 : Physical Science</a></li>
                 </ul>
                 <h4>PYTHON</h4>
                 <ul>
