--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <h2>Coding Skill</h2>
                 <h3>HTML+CSS</h3>
                 <ul>
-                <li><a href="https://https://avoyjana.github.io/Academic-Profile/"> 🔵 This Web page</a></li>
+                <li><a href="https://avoyjana.github.io/Academic-Profile/"> 🔵 This Web page</a></li>
                 <li><a href="https://avoyjana.github.io/YourArijit.github.io/"> 🔵 Enjoy Arijit Singh's world</a></li>
                 <li><a href="https://avoyjana.github.io/randomrabi.github.io/"> 🔵 Randomly pick Rabindra Sangeet</a></li>
                 <li><a href="https://avoyjana.github.io/nettest1.github.io/"> 🔵 CSIR NET Mock Test 1 : Physical Science</a></li>
