--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                 <li><a href="https://avoyjana.github.io/nettest2.github.io/"> 🔵 CSIR NET Mock Test 2 : Physical Science</a></li>
                 </ul>
                 <h4>PYTHON</h4>
+                <p>I have created a Python debugger here, you can give any input and see the output. All the code is available on my GitHub page.</p>
                 <ul>
                 <li><a href="cubicspline.html" target="_blank" class="open-link"> 🔵 Cubic Spline Interpolation</a></li>
                 </ul>
