--- a/index.html
+++ b/index.html
@@ -189,16 +189,16 @@
         
               <div class="section" id="Connect with me">
                 <h2>Connect with me</h2>
-                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/your-linkedin-id">your-linkedin-id</a></p>
-                <p><strong>ResearchGate:</strong> <a href="https://www.researchgate.net/profile/your-researchgate-id">your-researchgate-id</a></p>
-                <p><strong>ORCID:</strong> <a href="https://orcid.org/your-orcid-id">your-orcid-id</a></p>
+                <p><a href="https://www.linkedin.com/in/avoy-jana-2ab824296/"><strong>Linkedin</strong></a></p>
+                <p><a href="https://www.researchgate.net/profile/Avoy-Jana"><strong>ResearchGate</strong></a></p>
+                <p><a href="https://orcid.org/0009-0003-5324-1756"><strong>Orcid</strong></a></p>
+                <p><a href="https://github.com/avoyjana2000/avoyjana2000"><strong>Github</strong></a></p>
               </div>
               <div class="section" id="research-interests">
                 <h2>Research Interests</h2>
                 <ul>
                   <li>High Energy Physics</li>
                   <li>Computational Physics</li>
-                  <!-- Add more interests as needed -->
                 </ul>
               </div>
               <div class="section" id="publications">
@@ -207,7 +207,6 @@
                   <li>[Publication 1 with a link if available]</li>
                   <li>[Publication 2 with a link if available]</li>
                   <li>[Publication 3 with a link if available]</li>
-                  <!-- Add more publications as needed -->
                 </ul>
               </div>
               <div class="section" id="Modelling Physics Project">
