--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <p><a href="https://www.linkedin.com/in/avoy-jana-2ab824296/"><strong>Linkedin</strong></a></p>
                 <p><a href="https://www.researchgate.net/profile/Avoy-Jana"><strong>ResearchGate</strong></a></p>
                 <p><a href="https://orcid.org/0009-0003-5324-1756"><strong>Orcid</strong></a></p>
-                <p><a href="https://github.com/avoyjana2000/avoyjana2000"><strong>Github</strong></a></p>
+                <p><a href="https://github.com/avoyjana2000"><strong>Github</strong></a></p>
               </div>
               <div class="section" id="research-interests">
                 <h2>Research Interests</h2>
