--- a/index.html
+++ b/index.html
@@ -336,9 +336,16 @@
                             <li><a href="https://drive.google.com/file/d/10-LpjBAb4mjYQAwkA0xEZxvxXvkCBKvz/view?usp=drivesdk">Peskin & Schroeder</a></li>
                             <li><a href="https://drive.google.com/file/d/1020ENknbNxY7yCb9SAtkS5b8ZlR0U8tW/view?usp=drivesdk">Mark Srednicki</a></li>
                             <p>High Class Mathematics</p>
-                            <li><a href="https://drive.google.com/file/d/1KMPdRdDJD2NTfUx-Z0UcDTMzwHZybyYS/view?usp=sharing">Table of Integrals, Series and Products by Gradshteyn & Ryzhik</a></li>
-                            <li><a href="https://drive.google.com/file/d/1fIUiEUG9W1wWcRsO-8SC7VGx0YUrtr4K/view?usp=sharing">A treatise on the Theory of Bessel Function by G.N. Watson</a></li>
-                            <li><a href="https://drive.google.com/file/d/1WML0KV4okLOZ7Kl40qq2VSFqaOpDOA6s/view?usp=sharing">Green's function with application by Dean G. Duffy</a></li>
+                            <li><a href="https://drive.google.com/file/d/1n2R_CeBnYSefwnvBoPLxguXYMgUp4lb8/view?usp=drive_link">Table of Integrals, Series and Products by Gradshteyn & Ryzhik</a></li>
+                            <li><a href="https://drive.google.com/file/d/1Jil1QJdeKiWxYWsCl7SPpClJ7wC-AyTF/view?usp=drive_link">A treatise on the Theory of Bessel Function by G.N. Watson</a></li>
+                            <li><a href="https://drive.google.com/file/d/1tvItheZRaKEcuZlkAbfA2SuuKTIx11MM/view?usp=drive_link">Green's function with application by Dean G. Duffy</a></li>
+                            <li><a href="https://drive.google.com/file/d/1Sr1_4c8cNyR9lFaO9YjrNKAldgQpBxLZ/view?usp=drive_link">Table of Integral Transform Vol. I by A. Erdelyi</a></li>
+                            <li><a href="https://drive.google.com/file/d/1s8YHuHysDvdH5rlyaILa_k6VckKT9sFp/view?usp=drive_link">Table of Integral Transform Vol. II by A. Erdelyi</a></li>
+                            <li><a href="https://drive.google.com/file/d/1v0UNHuFHqJXSAUuNbpG9dRhQ9RZWyacX/view?usp=drive_link">Method of Theoritical Physics by Morse, Feshbach</a></li>
+                            <li><a href="https://drive.google.com/file/d/1sNT2q4SMgw5ACX67VeLbebUbE8bG_uRw/view?usp=drive_link">Integral Transform Techniques for Green’s Function by Kazumi Watanabe</a></li>
+                            <li><a href="https://drive.google.com/file/d/1cN5cN2QUxGldi-3d5G8uIVzjpqJp3RHj/view?usp=drive_link">Higher Transcendental Functions Vol. I by Erde'lyi, Wilhelm Magnus, Fritz Oberhettinger, Francesco G. Tricomi</a></li>
+                            <li><a href="https://drive.google.com/file/d/1_nzekS5j89pfhPmXdNfJ-ZjHNbdVEkel/view?usp=drive_link">Higher Transcendental Functions Vol. II by Erde'lyi, Wilhelm Magnus, Fritz Oberhettinger, Francesco G. Tricomi</a></li>
+                            <li><a href="https://drive.google.com/file/d/1CZqlcsmILz02x4vumWKrqDhGfrwk6JgU/view?usp=drive_link">Higher Transcendental Functions Vol. III by Erde'lyi, Wilhelm Magnus, Fritz Oberhettinger, Francesco G. Tricomi</a></li>
                             <p>Statistics and Probability</p>
                             <li><a href="https://drive.google.com/file/d/10PZU9DXw_UUeSdeCqEOWdbYv1LNkroPQ/view?usp=drivesdk"> Statistical Inference by Casella & Berger</a></li>
                         </ul>
