--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                             <p>High Class Mathematics</p>
                             <li><a href="https://drive.google.com/file/d/1n2R_CeBnYSefwnvBoPLxguXYMgUp4lb8/view?usp=drive_link">Table of Integrals, Series and Products by Gradshteyn & Ryzhik</a></li>
                             <li><a href="https://drive.google.com/file/d/1Jil1QJdeKiWxYWsCl7SPpClJ7wC-AyTF/view?usp=drive_link">A treatise on the Theory of Bessel Function by G.N. Watson</a></li>
-                            <li><a href="https://drive.google.com/file/d/1tvItheZRaKEcuZlkAbfA2SuuKTIx11MM/view?usp=drive_link">Green's function with application by Dean G. Duffy</a></li>
+                            <li><a href="https://drive.google.com/file/d/17MBqE9tv0fMWgLDJYPRSOJ13VUw9kIHq/view?usp=sharing">Green's function with application by Dean G. Duffy</a></li>
                             <li><a href="https://drive.google.com/file/d/1Sr1_4c8cNyR9lFaO9YjrNKAldgQpBxLZ/view?usp=drive_link">Table of Integral Transform Vol. I by A. Erdelyi</a></li>
                             <li><a href="https://drive.google.com/file/d/1s8YHuHysDvdH5rlyaILa_k6VckKT9sFp/view?usp=drive_link">Table of Integral Transform Vol. II by A. Erdelyi</a></li>
                             <li><a href="https://drive.google.com/file/d/1v0UNHuFHqJXSAUuNbpG9dRhQ9RZWyacX/view?usp=drive_link">Method of Theoritical Physics by Morse, Feshbach</a></li>
