--- a/index.html
+++ b/index.html
@@ -348,6 +348,9 @@
                             <li><a href="https://drive.google.com/file/d/1CZqlcsmILz02x4vumWKrqDhGfrwk6JgU/view?usp=drive_link">Higher Transcendental Functions Vol. III by Erde'lyi, Wilhelm Magnus, Fritz Oberhettinger, Francesco G. Tricomi</a></li>
                             <p>Statistics and Probability</p>
                             <li><a href="https://drive.google.com/file/d/10PZU9DXw_UUeSdeCqEOWdbYv1LNkroPQ/view?usp=drivesdk"> Statistical Inference by Casella & Berger</a></li>
+                            <p>Numerical Methods</p>
+                            <li><a href="https://drive.google.com/file/d/1wQS7WuJxwr1h49UYoPJ46Lqdlsk1ERxl/view?usp=drive_link"> Numerical Mathematics and Computing by E ward cheney and David kincaidr</a></li>
+                            
                         </ul>
                     </details>
               </div>
