--- a/index.html
+++ b/index.html
@@ -354,6 +354,28 @@
                         </ul>
                     </details>
               </div>
+              <div class="section" id="literature">
+                    <details>
+                        <summary>
+                           <h2>HEP (Phenomenology) Reference<br>
+                               These are collapsible content, click here.</h2>
+                        </summary>
+                        <ul>
+                            <p>CPT transformations</p>
+                            <li><a href="https://doi.org/10.48550/arXiv.2312.17386">PT-symmetric quantum mechanics by Carl M. Bender, Daniel W. Hook</a></li>
+                            <p>Gauge Theory</p>
+                            <li><a href="https://library.oapen.org/handle/20.500.12657/59106"> Gauge Theory of Elementary Particle Physics by Cheng, Li <span style="color: red;">(Standard Textbook)</span> </a></li>
+                            <li><a href="https://vpmthane.org/web2/assets/files/Mr.-GaurangTawde_GaugeSymmetry.pdf"> Local Gauge Symmetries by Gaurang Tawde <span style="color: red;">(Good description of U(1), SU(2), SU(3))</span> </a></li>
+                            <p>Higgs Mechanism</p>
+                            <li><a href="https://doi.org/10.1016/j.ppnp.2018.01.003">The Standard Model and Higgs physics by Ezio Torassa</a></li>
+                            <p>Standard Model</p>
+                            <li><a href="https://doi.org/10.48550/arXiv.hep-ph/0001283">Standard Model: An Introduction by S. F. Novaes </a></li>
+                            <p>Two Higgs Doublet Model</p>
+                            <li><a href="https://drive.google.com/file/d/10PZU9DXw_UUeSdeCqEOWdbYv1LNkroPQ/view?usp=drivesdk">Higgs mechanism in the general Two-Higgs-Doublet Model by Degée, Audrey <span style="color: red;">(Potential description)</span> </a></li>
+                            
+                        </ul>
+                    </details>
+              </div>
               <div class="section" id="contact">
                 <h2>Contact</h2>
                 <p>If you would like to get in touch, please contact me via email at <a href="avoyjana2000@gmail.com">avoyjana2000@gmail.com</a>.</p>
