--- a/index.html
+++ b/index.html
@@ -379,8 +379,11 @@
               <div class="section" id="contact">
                 <h2>Contact</h2>
                 <p>If you would like to get in touch, please contact me via email at <a href="avoyjana2000@gmail.com">avoyjana2000@gmail.com</a>.</p>
-                <p>Place: Room Sc-06, Girnar House, IITD</p>
-                <p>Phone: Mail me to Connect</p>
+                <p>Place: Room ED-09, Girnar House, IITD</p>
+                <p style="display: flex; justify-content: space-between;">
+                     <span>Phone: Mail me to Connect</span>
+                     <span style="color: red;">Hosted : 05th March, 2024 Last Updated : 6th Nov, 2024</span>
+                </p>
               </div>
             
             </div> <!--class container-->
