--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 <p>Place: Room ED-09, Girnar House, IITD</p>
                 <p style="display: flex; justify-content: space-between;">
                      <span>Phone: Mail me to Connect</span>
-                     <span style="color: red;">Hosted : 05th March, 2024 Last Updated : 6th Nov, 2024</span>
+                     <span style="color: blue;">Hosted : 05th March, 2024 Last Updated : 6th Nov, 2024</span>
                 </p>
               </div>
             
