--- a/index.html
+++ b/index.html
@@ -197,16 +197,21 @@
               <div class="section" id="research-interests">
                 <h2>Research Interests</h2>
                 <ul>
-                  <li>High Energy Physics</li>
-                  <li>Computational Physics</li>
+                  <li>High Energy Physics (Phenomenology)</li>
+                  <li>Mathematical Physics</li>
                 </ul>
               </div>
               <div class="section" id="publications">
-                <h2>Publications</h2>
+                <h2>Ongoing Book</h2>
+                <ul>
+                  <li>Free Space Green Functions of LPDEs through Integral Transform Techniques by Avoy Jana</li>
+                  <iframe src="GFB.pdf" width="100%" height="600px"></iframe>
+                </ul>
+              </div>
+              <div class="section" id="publications">
+                <h2> Ongoing Publications</h2>
                 <ul>
                   <li>[Publication 1 with a link if available]</li>
-                  <li>[Publication 2 with a link if available]</li>
-                  <li>[Publication 3 with a link if available]</li>
                 </ul>
               </div>
               <div class="section" id="Modelling Physics Project">
