--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
               </div>
               <div class="section" id="publications">
                 <h2>Ongoing Book</h2>
-                <ul>
-                  <li>Free Space Green Functions of LPDEs through Integral Transform Techniques by Avoy Jana</li>
-                  <iframe src="GFB.pdf" width="100%" height="600px"></iframe>
-                </ul>
+                <details>
+                  <summary>Free Space Green Functions of LPDEs through Integral Transform Techniques by Avoy Jana</summary>
+                  <iframe src="GFB.pdf" width="100%" height="1000px"></iframe>
+                </details>
               </div>
               <div class="section" id="publications">
                 <h2> Ongoing Publications</h2>
