--- a/index.html
+++ b/index.html
@@ -204,15 +204,16 @@
               <div class="section" id="publications">
                 <h2>Ongoing Book</h2>
                 <details>
-                  <summary>Free Space Green Functions of LPDEs through Integral Transform Techniques by Avoy Jana</summary>
+                  <summary>Free Space Green Functions of LPDEs through Integral Transform Techniques, Avoy Jana</summary>
                   <iframe src="GFB.pdf" width="100%" height="1000px"></iframe>
                 </details>
               </div>
               <div class="section" id="publications">
                 <h2> Ongoing Publications</h2>
-                <ul>
-                  <li>[Publication 1 with a link if available]</li>
-                </ul>
+                <details>
+                  <summary>Radial Uncertainty Product for Spherically Symmetric Potential in Position Space, Avoy Jana</summary>
+                  <img src="SSP.png" style="width: 100%; max-width: none;"  />
+                </details>
               </div>
               <div class="section" id="Modelling Physics Project">
                   <h2>Modelling Physics Project</h2>
