--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
               <div class="section" id="research-interests">
                 <h2>Research Interests</h2>
                 <ul>
-                  <li>High Energy Physics (Phenomenology)</li>
-                  <li>Mathematical Physics</li>
+                  <p>&bull; High Energy Physics (Phenomenology) &bull; Mathematical Physics</p>
                 </ul>
               </div>
               <div class="section" id="publications">
