--- a/index.html
+++ b/index.html
@@ -187,18 +187,15 @@
                     </div>
                </div>
         
-              <div class="section" id="Connect with me">
-                <h2>Connect with me</h2>
-                <p><a href="https://www.linkedin.com/in/avoy-jana-2ab824296/"><strong>Linkedin</strong></a></p>
-                <p><a href="https://www.researchgate.net/profile/Avoy-Jana"><strong>ResearchGate</strong></a></p>
-                <p><a href="https://orcid.org/0009-0003-5324-1756"><strong>Orcid</strong></a></p>
-                <p><a href="https://github.com/avoyjana2000"><strong>Github</strong></a></p>
+              <div class="section" id="Connection ">
+                <h2>Connection</h2>
+                <p>&bull;<a href="https://www.linkedin.com/in/avoy-jana-2ab824296/"><strong>Linkedin</strong></a> &bull; <a href="https://www.researchgate.net/profile/Avoy-Jana"><strong>ResearchGate</strong></a>
+                   &bull; <a href="https://orcid.org/0009-0003-5324-1756"><strong>Orcid</strong></a>  &bull; <a href="https://www.researchgate.net/profile/Avoy-Jana"><strong>ResearchGate</strong></a>
+                   &bull; <a href="https://github.com/avoyjana2000"><strong>Github</strong></a></p>
               </div>
               <div class="section" id="research-interests">
                 <h2>Research Interests</h2>
-                <ul>
                   <p>&bull; High Energy Physics (Phenomenology) &bull; Mathematical Physics</p>
-                </ul>
               </div>
               <div class="section" id="publications">
                 <h2>Ongoing Book</h2>
