--- a/index.html
+++ b/index.html
@@ -165,11 +165,21 @@
                 <img src="image.jpeg" alt="photo">
                 <h1>Mr. AVOY JANA</h1>
                 <p>BSc (Vidyasagar University), Msc (IIT Delhi)</p>
+                <p>JAM Q (2023) , CSIR NET(2024) LS Q, CSIR NET(2025) JRF Q &forall; Q = Qualified </p>
               </div>
           
               <div class="section" id="introduction">
-                <h2>Introduction</h2>
-                <p>Hello! I am Avoy Jana, persuing Masters in Physics in Indian Institute of Technology, Delhi. I am trying to conserve my all works, being embedded in this webpage.</p>
+                <h2>About</h2>
+                <p>Hello! I am Avoy Jana, persuing Masters in Physics in Indian Institute of Technology, Delhi. I am trying to conserve my all works, being embedded in this webpage. 
+                    Me, always an average student, but a good explorer in viewpoint of Physics, I think. Ever I grow up, I work hard and harder while my certificates are lacking numbers. 
+                    In region of interest, I can spend a month for a problem, until it's solved. Solution tells, "it's easy now not before", make me a "Believer".
+                Open to solve your abstract mathematical problem of Special function (Hermite, Legendre, Bessel, Laguerre, Hypergeometric) including probability distribution (Gamma, Beta, Bernoulli, Binomial, Poisson, Normal),
+                    Green function (a content of my ongoing book given below), Group theory (SO, SU), Complex integration including branch cut techniques, Integral transforms (Fourier, Laplace, Hankel), 
+                    Multi-dimensional approach (Spherical, Cylindrical, Radial operator, Expectations), likely appear in applied science, if I can, I must solve.
+                 I'm going through QM, QED, QFT, QCD, SM, BSM to get a PhD for theoretical high energy physics, if any recommendations available, please give an opportunity to a newer.
+                </p>
+                <p>Regards,</p>
+                <p>A.</p>
               </div>
               <div class="section" id="Curriculam Vitae">
                 <h2>CV and SoP </h2>
