--- a/index.html
+++ b/index.html
@@ -391,11 +391,17 @@
                             <li><a href="https://vpmthane.org/web2/assets/files/Mr.-GaurangTawde_GaugeSymmetry.pdf"> Local Gauge Symmetries by Gaurang Tawde <span style="color: red;">(Good description of U(1), SU(2), SU(3))</span> </a></li>
                             <p>Higgs Mechanism</p>
                             <li><a href="https://doi.org/10.1016/j.ppnp.2018.01.003">The Standard Model and Higgs physics by Ezio Torassa</a></li>
+                            <li><a href="http://dx.doi.org/10.1134/S1063779608010024">On Higgs mass generation mechanism in the Standard Model by V. A. Bednyakov, N. D. Giokaris, A.V. Bednyakov<span style="color: red;">(Simple crystal clear description)</span></a></li>
                             <p>Standard Model</p>
                             <li><a href="https://doi.org/10.48550/arXiv.hep-ph/0001283">Standard Model: An Introduction by S. F. Novaes </a></li>
                             <p>Two Higgs Doublet Model</p>
                             <li><a href="https://drive.google.com/file/d/10PZU9DXw_UUeSdeCqEOWdbYv1LNkroPQ/view?usp=drivesdk">Higgs mechanism in the general Two-Higgs-Doublet Model by Degée, Audrey <span style="color: red;">(Potential description)</span> </a></li>
-                            
+                            <li><a href="https://doi.org/10.1007/JHEP04%282022%29172"> Cornering the Two Higgs Doublet Model Type II by Oliver Atkinson, Matthew Black, Alexander Lenz, Aleksey Rusov, James Wynne <span style="color: red;">(Type II 2HDM - Main )</span><a/></li>
+                            <li><a href="https://doi.org/10.1016/j.physrep.2012.02.002">Theory and phenomenology of two-Higgs-doublet models by G. C. Branco, P. M. Ferreira, L. Lavoura, M. N. Rebelo, Marc Sher, Joao P. Silva <span style="color: red;">(Main Ref. 3)</span> </a></li> 
+                            <li><a href="https://doi.org/10.1007/JHEP02%282017%29121"> Strong First Order Electroweak Phase Transition in the CP-Conserving 2HDM Revisited by P. Basler, M. Krause, M. Muhlleitner, J. Wittbrodt, A. Wlotzka <span style="color: red;">(Main Ref. 19)</span> </a></li>
+                            <li><a href="https://doi.org/10.48550/arXiv.2003.06170"> Revisiting wrong sign Yukawa coupling of type II two-Higgs-doublet model in light of the recent LHC data by Lei Wang, Hong-Xin Wang, Xiao-Fang Han <span style="color: red;">(Main Ref. 23)</span> </a></li> 
+                            <li><a href="https://doi.org/10.1007/JHEP01%282021%29045"> Comparative Studies of 2HDMs under the Higgs Boson Precision Measurements by Tao Han, Shuailong Li, Shufang Su, Wei Su, Yongcheng Wu <span style="color: red;">(Main Ref. 24)</span> </a></li>     
+                             
                         </ul>
                     </details>
               </div>
