--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
                 <li><a href="https://avoyjana.github.io/Academic-Profile/"> 🔵 This Web page</a></li>
                 <li><a href="https://avoyjana.github.io/YourArijit.github.io/"> 🔵 Enjoy Arijit Singh's world</a></li>
                 <li><a href="https://avoyjana.github.io/RupamIslam/"> 🔵 It's RUPAM ISLAM !</a></li>
+                <li><a href="https://avoyjana.github.io/AlarmClock/"> 🔵 Alarm Clock </a></li>
                 <li><a href="https://avoyjana.github.io/randomrabi.github.io/"> 🔵 Randomly pick Rabindra Sangeet</a></li>
                 <li><a href="https://avoyjana.github.io/nettest1.github.io/"> 🔵 CSIR NET Mock Test 1 : Physical Science</a></li>
                 <li><a href="https://avoyjana.github.io/nettest2.github.io/"> 🔵 CSIR NET Mock Test 2 : Physical Science</a></li>
