--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
                             <li><a href="https://doi.org/10.48550/arXiv.2312.17386">PT-symmetric quantum mechanics by Carl M. Bender, Daniel W. Hook</a></li>
                             <p>Gauge Theory</p>
                             <li><a href="https://library.oapen.org/handle/20.500.12657/59106"> Gauge Theory of Elementary Particle Physics by Cheng, Li <span style="color: red;">(Standard Textbook)</span> </a></li>
+                            <li><a href="https://drive.google.com/file/d/1Ro9vkohIKm5H0QIvbLTbz2EbAPOPkpvF/view?usp=sharing"> Free and Interacting Quantum Fields by Daniel Radu <span style="color: red;">(Why interacting fields?)</span> </a></li>
                             <li><a href="https://vpmthane.org/web2/assets/files/Mr.-GaurangTawde_GaugeSymmetry.pdf"> Local Gauge Symmetries by Gaurang Tawde <span style="color: red;">(Good description of U(1), SU(2), SU(3))</span> </a></li>
                             <p>Higgs Mechanism</p>
                             <li><a href="https://doi.org/10.1016/j.ppnp.2018.01.003">The Standard Model and Higgs physics by Ezio Torassa</a></li>
@@ -409,7 +410,7 @@
                 <p>Place: Room ED-09, Girnar House, IITD</p>
                 <p style="display: flex; justify-content: space-between;">
                      <span>Phone: Mail me to Connect</span>
-                     <span style="color: blue;">Hosted : 05th March, 2024 Last Updated : 6th Nov, 2024</span>
+                     <span style="color: blue;">Hosted : 05th March, 2024 Last Updated : 11th Nov, 2024</span>
                 </p>
               </div>
             
