--- a/index.html
+++ b/index.html
@@ -199,19 +199,19 @@
               <div class="section" id="connection">
                  <h2>🔗 Connect with Me</h2>
                      <p style="font-size: 22px;">
-                     <a href="https://www.linkedin.com/in/avoy-jana-2ab824296/" target="_blank">💼</a>
+                     <a href="https://www.linkedin.com/in/avoy-jana-2ab824296/" target="_blank"> Linkedin💼</a>
                      &nbsp;
-                     <a href="https://www.researchgate.net/profile/Avoy-Jana" target="_blank">📘</a>
+                     <a href="https://www.researchgate.net/profile/Avoy-Jana" target="_blank"> Researchgate📘</a>
                      &nbsp;
-                     <a href="https://orcid.org/0009-0003-5324-1756" target="_blank">🆔</a>
+                     <a href="https://orcid.org/0009-0003-5324-1756" target="_blank">Orcid🆔</a>
                      &nbsp;
-                     <a href="https://github.com/avoyjana2000" target="_blank">💻</a>
+                     <a href="https://github.com/avoyjana2000" target="_blank">Github💻</a> 
                  </p>
               </div>
 
               <div class="section" id="research-interests">
                 <h2>Research Interests</h2>
-                  <p>&bull; High Energy Physics (Phenomenology) &bull; Mathematical Physics</p>
+                  <p>&bull; ................. &bull; Mathematical Physics</p>
               </div>
               <div class="section" id="publications">
                 <h2>Ongoing Book</h2>
